ProductListFiltered: bugfix gap between card

--- a/src/components/ProductListFiltered/ProductListFiltered.scss
+++ b/src/components/ProductListFiltered/ProductListFiltered.scss
@@ -126,7 +126,7 @@
 
     @include tablet-d {
       max-width: none;
-      flex: 0 0 percent(181, 384);
+      flex: 0 0 percent(181, 367);
     }
   }
   // .product-list-filtered_filters-hide
